<resources>
    <string name="app_name">Presentor</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_create_lobby">Sign in</string>


    <!--create lobby strings-->
    <string name="screen_mirror_create_title_description">Create Lobby to Start Screen Mirroring</string>
    <string name="screen_mirror_create_lobby_name">Lobby name</string>
    <string name="screen_mirror_create_password">Password (Optional)</string>
    <string name="screen_mirror_start_session">Start Screen Mirroring</string>
    <string name="screen_mirror_stop_session">Stop Screen Mirroring</string>
    <string name="screen_mirror_show_pass">Show Password</string>
    <string name="connected_clients">Connected Clients: </string>

    <!--content main strings-->
    <string name="title_screen_mirror">Share</string>
    <string name="screen_mirror_description">Start a group presentation by creating a new lobby.</string>
    <string name="title_access_lobby">Access</string>
    <string name="access_lobby_description">Join a group presentation.</string>


    <!--Domotics strings-->
    <string name="master_switch">Master Switch</string>

    <string-array name="appliance_name">

        <item>Appliance 1</item>
        <item>Appliance 2</item>
        <item>Appliance 3</item>
        <item>Appliance 4</item>
        <item>Appliance 5</item>
        <item>Appliance 6</item>
        <item>Appliance 7</item>
        <item>Appliance 8</item>

    </string-array>

    <string name="appliance_status_on">On</string>
    <string name="appliance_status_off">Off</string>


    <!--screen share string-->
    <string name="title">Available rooms</string>
    <string name="searching">Searching for rooms...</string>
    <string name="room_empty">No available rooms as of now.</string>


    <!--Navigation drawer string-->
    <string name="domotics">Screen Mirroring</string>
    <string name="screen_mirroring">Domotics</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>


    <!--Alert Dialog-->
    <string name="yes">YES</string>
    <string name="no">NO</string>


    <!--For Screen Share-->
    <string name="screen_share_dialog_title">No network Connection</string>
    <string name="screen_share_dialog_message">
        Screen mirroring requires a network connection to your target network.\n\nDo you want to go to the Wi-Fi settings now?
    </string>


    <!--For Alert Dialogs-->
    <string name="rename">Rename</string>
    <string name="cancel">Cancel</string>
    <string name="connect">Connect</string>


    <!--Shared pref keys-->
    <string name="lobby_status">status</string>
    <string name="lobby_name">lobbyname</string>
    <string name="lobby_pass">password</string>


    <!--For floating widget-->
    <string name="create_floating_widget">Create Floating Widget</string>
    <string name="floating_widget_label">Floating Widget Label</string>
    <string name="floating_widget_details">Floating Widget Details</string>
    <string name="draw_other_app_permission_denied">Draw over other app permission not available. App won\'t work without permission. Please try again.</string>
    <string name="title_activity_settings">Settings</string>





    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Kaboomskie</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
