<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="General">
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_display_name"
            android:inputType="textCapWords"
            android:key="example_text"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_name" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Domotics">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="check_box_preference_1"
            android:title="Auto connect to Bluetooth device"
            android:summary="@string/screen_mirror_description"/>

        <!--<Preference android:title="@string/pref_title_system_sync_settings">
            <intent android:action="android.settings.SYNC_SETTINGS" />
        </Preference>-->
        <ListPreference
            android:defaultValue="180"
            android:entries="@array/pref_sync_frequency_titles"
            android:entryValues="@array/pref_sync_frequency_values"
            android:key="sync_frequency"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_sync_frequency" />


    </PreferenceCategory>

    <PreferenceCategory android:title="Screen Mirroring">
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_display_name"
            android:inputType="numberDecimal"
            android:key="example_text"
            android:maxLines="1"
            android:maxLength="3"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Resize Image" />

        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_display_name"
            android:inputType="numberDecimal"
            android:key="example_text"
            android:maxLines="1"
            android:maxLength="3"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="JPEG compression quality" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Others">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="check_box_preference_1"
            android:summary="@string/screen_mirror_description"
            android:title="Show help" />


    </PreferenceCategory>
</PreferenceScreen>